# cplusql

./: .gitignore  AUTHORS  CHANGES  ChangeLog  Makefile.am  Makefile.in  README.md  TODO  aclocal.m4  acsite.m4  auto.sh  autoclean.sh  configure  configure.ac  dist.sh  make.env  tags.bak
CVS/: Entries  Repository
autom4te.cache/: output.1  requests  traces.0  traces.1
frame/: .config.env  AUTHORS  COPYRIGHT  ChangeLog  Makefile.am  Makefile.in  Makefile.orig  README  aclocal.m4  acsite.m4  auto.sh  autoclean.sh  configure  configure.ac  make.env  ptr.sh  report.sh
frame/CVS/: Entries
frame/autom4te.cache/: output.1  requests  traces.0  traces.1
frame/inc/: .#system_config.h.in.1.4  ADSMapFactory.h  ADSProxyMap.h  AbortExpression.h  AbstractDelimitedSource.h  AbstractDelimitedSourceMap.h  AbstractDelimitedSourceNext.h  AbstractDestFactory.h  AbstractHashAlg.h  AbstractJoint.h  AbstractKeyValMap.h  AbstractKeyValSetMap.h  AbstractNotifier.h  AbstractProjection.h  AbstractRelation.h  AbstractRelationMeta.h  AbstractSimpleMeta.h  AdditionExpression.h  AppConfig.h  AppExceptionHandler.h  AppLog.h  ArithmeticExpression.h  AsyncRunnable.h  AsyncRunnableCollection.h  AsyncRunnableCollectionPriv.h  Auth.h  AvgProjection.h  BaseException.h  BasicHashAlg.h  BinaryExpressionPriv.h  BinaryIntegerExpression.h  BitwiseAndExpression.h  BitwiseOrExpression.h  BooleanExpression.h  ByteBuf.h  BytePusher.h  ByteSource.h  ByteStripExpression.h  CRC48Expression.h  CRC48HashAlg.h  (+212 more)
frame/inc/CVS/: Entries  Repository
frame/inc/db/: DBConnection.h  DBConnectionFactory.h  DBDelimitedSource.h  DBDelimitedSourcePriv.h  DBException.h  DBMap.h  DBMapFactory.h  DBPreparedStatement.h  DBResultSet.h  DBStatement.h  OracleConnection.h  OracleResultSet.h  OracleStatement.h  PostgresConnection.h  PostgresPreparedStatement.h  PostgresResultSet.h  PostgresStatement.h  sequenceWrapper.h
frame/inc/db/CVS/: Entries  Repository  Root
frame/src/: .#ByteStripExpression.cpp.1.1  .#Makefile.am.1.35  .#SimpleRelation.cpp.1.9  .RegexSearchExpression.cpp.swp  .XpathRelation.cpp.swp  ADSMapFactory.cpp  ADSProxyMap.cpp  AbortExpression.cpp  AbstractDelimitedSource.cpp  AbstractDelimitedSourceMap.cpp  AbstractDelimitedSourceNext.cpp  AbstractDestFactory.cpp  AbstractHashAlg.cpp  AbstractJoint.cpp  AbstractKeyValMap.cpp  AbstractKeyValSetMap.cpp  AbstractNotifier.cpp  AbstractProjection.cpp  AbstractRelation.cpp  AbstractRelationMeta.cpp  AbstractSimpleMeta.cpp  AdditionExpression.cpp  AppConfig.cpp  AppExceptionHandler.cpp  AppLog.cpp  ArithmeticExpression.cpp  AsyncRunnable.cpp  AsyncRunnableCollection.cpp  Auth.cpp  AvgProjection.cpp  BaseException.cpp  BasicHashAlg.cpp  BinaryIntegerExpression.cpp  BitwiseAndExpression.cpp  BitwiseOrExpression.cpp  BooleanExpression.cpp  ByteBuf.cpp  BytePusher.cpp  ByteSource.cpp  ByteStripExpression.cpp  (+212 more)
frame/src/CVS/: Entries  Repository
frame/test/: Makefile.am  Makefile.in  dbtest.cpp  foo.cfg  foo2.cfg  make_makefile_am.sh  pgdbtest.cpp  test-applog.cpp  test-config.cpp  test-convert.cpp  test-dirtree.cpp  test-event.cpp  test-exclusion.cpp  test-execpipe.cpp  test-execwrap.cpp  test-expression.cpp  test-glob.cpp  test-hash.cpp  test-iconv.cpp  test-lru.cpp  test-merge_join_relation.cpp  test-parse.cpp  test-parse_rfc822.cpp  test-projection_relation.cpp  test-ptr.cpp  test-ptrsemaphore.cpp  test-ptrthread.cpp  test-relmeta.cpp  test-resource.cpp  test-simple_relation.cpp  test-slurp.cpp  test-source.cpp  test-str_split_relation.cpp  test.sh  test_config.err.eng  test_config.out.eng  test_convert.err.eng  test_ptr.err.eng  test_slurp.out.eng  working_tests.txt
frame/test/CVS/: Entries  Repository
idl/: JobExecService.idl  JobQueueService.idl  clusterio.idl  service.idl
inc/: AuditLog.h  ClusterByteSource.h  ClusterDestBuffered.h  ClusterDestFactory.h  ClusterDestFile.h  CplusqlContext.h  CplusqlExceptionHandling.h  FileHandler.h  FileIO.h  GenericServiceImpl.h  JobExecServiceImpl.h  JobQRunnable.h  JobQueueServiceImpl.h  JobRunnable.h  NVPairUtil.h  NameSpaceServiceImpl.h  NodeCntl.h  NodeMonitorServiceImpl.h  RWSExceptions.h  RWSRunnable.h  ReadWriteController.h  ReadWriteServiceImpl.h  ServiceStatusMap.h  SharedServiceMain.h  ShutdownHandler.h  StateQueues.h  TestNarrow.h  cplusql.h  cplusql.h.new  cplusql_api.h  cplusql_api.h.patch  cplusql_config.h.in  cplusql_config.h.in~  keys.h
services/: AuditLog.cpp  FileHandler.cpp  FileIO.cpp  GenericClient.cpp  GenericService.cpp  GenericServiceImpl.cpp  JobExecClient.cpp  JobExecService.cpp  JobExecServiceImpl.cpp  JobQueueClient.cpp  JobQueueService.cpp  JobQueueServiceImpl.cpp  MAKEFILE  Makefile.Generic  Makefile.JobQueue  Makefile.NodeMonitor  NVPairUtil.cpp  NameSpaceClient.cpp  NameSpaceService.cpp  NameSpaceServiceImpl.cpp  NodeCntl.cpp  NodeMonitorClient.cpp  NodeMonitorService.cpp  NodeMonitorServiceImpl.cpp  PingClient.cpp  RWSExceptions.cpp  RWSRunnable.cpp  ReadWriteApiTest.cpp  ReadWriteClient.cpp  ReadWriteController.cpp  ReadWriteService.cpp  ReadWriteServiceImpl.cpp  ServiceStatusMap.cpp  SharedServiceMain.cpp  ShutdownHandler.cpp  StateQueues.cpp  TestNarrow.cpp  startJobExecClient.sh  startJobExecService.sh  startJobQueueClient.sh  (+11 more)
src/: .#CplusqlContext.cpp.1.27  .#CplusqlExceptionHandling.cpp.1.1  .Makefile.am.swp  .Makefile.swp  .myMakefile.swp  ClusterByteSource.cpp  ClusterDestBuffered.cpp  ClusterDestFactory.cpp  ClusterDestFile.cpp  CplusqlContext.cpp  CplusqlExceptionHandling.cpp  CplusqlMain.cpp  JobQRunnable.cpp  JobRunnable.cpp  Makefile.am  Makefile.in  cplusql_api.cpp  cplusql_grammar.c  cplusql_grammar.h  cplusql_grammar.y  cplusql_lexer.c  cplusql_lexer.l  y.vcg
src/CVS/: Entries  Repository
test/: Makefile.am  Makefile.in  abort.cplusql  all_tests.sh  bjork.cplusql  bjork.input.txt  bjork.output.txt  ceil_floor_test.cplusql  ceil_floor_test.sh  ceil_split.cplusql  cntmatch.01.eng  cntmatch.cplusql  command.cplusql  convert_full_to_mini.cplusql  convert_full_to_mini.env  convert_full_to_mini.input.txt  convert_full_to_mini.output.eng  dbconnection.cplusql  dbconnection.output.eng  (+81 more)
(+56 files in other folders)
